--- a/index.html
+++ b/index.html
@@ -2,9 +2,64 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header-menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullet">
+            <a class="header__link header__link_active" href="#home">главная</a>
+          </li>
+          <li class="header__links-list-item header__links-list-item_no-bullet">
+            <a class="header__link header__link_active" href="#home"
+              >посмотреть лоты</a
+            >
+          </li>
+          <li class="header__links-list-item header__links-list-item_no-bullet">
+            <a class="header__link header__link_active" href="#home"
+              >об аукционе</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="header__logo">
+        <a href="#home"><img class="header__logo_image src="" alt="логотип"/></a>
+      </div>
+      <div class="address header__address">
+        <address>
+          <a href="tel:+77778889900">+9 999 555 5555</a>
+          <a href="mailto:article@auth.or"
+            >наб. Принсенграхт 263- 265, Амстердам</a
+          ><br />
+        </address>
+      </div>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">оно</span
+            ><span class="aligned-text_center">тебе</span
+            ><span class="aligned-text_right">надо</span>
+          </h1>
+          <div class="cover__description">
+            <h2 class="cover__description-text">
+              Аукцион вещей, вкоторые никто не верил
+            </h2>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots">
+        <article></article>
+      </section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
