--- a/index.html
+++ b/index.html
@@ -1,65 +1,171 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="header">
-      <nav class="header-menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullet">
-            <a class="header__link header__link_active" href="#home">главная</a>
-          </li>
-          <li class="header__links-list-item header__links-list-item_no-bullet">
-            <a class="header__link header__link_active" href="#home"
-              >посмотреть лоты</a
+        <nav class="header-menu">
+            <ul class="header__links-list">
+                <li class="header__links-list-item header__links-list-item_no-bullet">
+                    <a class="header__link header__link_active" href="#">главная</a>
+                </li>
+                <li class="header__links-list-item">
+                    <a class="header__link" href="#">посмотреть лоты</a
             >
           </li>
-          <li class="header__links-list-item header__links-list-item_no-bullet">
-            <a class="header__link header__link_active" href="#home"
+          <li class="header__links-list-item">
+            <a class="header__link" href="#"
               >об аукционе</a
             >
           </li>
         </ul>
       </nav>
       <div class="header__logo">
-        <a href="#home"><img class="header__logo_image src="" alt="логотип"/></a>
-      </div>
-      <div class="address header__address">
-        <address>
-          <a href="tel:+77778889900">+9 999 555 5555</a>
-          <a href="mailto:article@auth.or"
-            >наб. Принсенграхт 263- 265, Амстердам</a
-          ><br />
+        <a><img class="header__logo_image" src="./images/logo-black.svg" alt="логотип"/></a>
+                    </div>
+                    <address class="address">
+          <a class="header__address" href="tel:+77778889900">+9 999 555 5555</a>
+          <a class="header__address" href="mailto:mail@example.com">info@sobaka.ge</a>          
+            наб. Принсенграхт 263-<br/> 265, Амстердам
         </address>
-      </div>
     </header>
     <main>
-      <section class="cover">
-        <div class="overlay">
-          <h1 class="cover__title">
-            <span class="aligned-text">оно</span
-            ><span class="aligned-text_center">тебе</span
-            ><span class="aligned-text_right">надо</span>
-          </h1>
-          <div class="cover__description">
-            <h2 class="cover__description-text">
-              Аукцион вещей, вкоторые никто не верил
+        <section class="cover">
+            <div class="overlay"></div>
+            <h1 class="cover__title">
+                <span class="aligned-text">о<span class="letter-spacing-extended">н</span><span class="no-letter-spacing">o</span></span>
+                <span class="aligned-text_center">те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span></span>
+                <span class="aligned-text_right">
+                    <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+                </span>
+            </h1>
+            <div class="cover__description">
+                <p class="cover__description-text">
+                    Аукцион вещей, в которые никто не верил
+                </p>
+                <button class="bet-button">Сделать ставку</button>
+            </div>
+
+        </section>
+        <section class="lots">
+            <h2 class="lots__heading">
+                Лоты
             </h2>
-            <button class="bet-button">Сделать ставку</button>
-          </div>
-        </div>
-      </section>
-      <section class="lots">
-        <article></article>
-      </section>
-      <section class="about"></section>
+            <ul class="lots__card-list">
+                <li class="lots__card-list-item card_type_film">
+                    <div class="overlay"></div>
+                    <a href="" class="card-link">
+                        <div class="card">
+
+                            <h3 class="card__title">
+                                Фильм режиссёра, который бросил киношколу
+                            </h3>
+                            <p class="card__text">
+                                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                            </p>
+
+                        </div>
+                    </a>
+                </li>
+                <li class="lots__card-list-item card_type_book">
+                    <div class="overlay"></div>
+                    <a href="" class="card-link">
+                        <div class="card">
+
+                            <h3 class="card__title">
+                                Книга, где описан один скучный день из жизни рекламного агента
+                            </h3>
+                            <p class="card__text">
+                                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера.
+                                Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                            </p>
+
+                        </div>
+                    </a>
+                </li>
+                <li class="lots__card-list-item card_type_picture">
+                    <div class="overlay"></div>
+                    <a href="" class="card-link">
+                        <div class="card">
+                            <h3 class="card__title">
+                                Картина, которую повторит даже 5-летний сын маминой подруги
+                            </h3>
+                            <p class="card__text">
+                                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                            </p>
+
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <a href="" class="lots__look-more-link">
+              Посмотреть больше
+            </a>
+        </section>
+        <section class="about">
+            <div class="about__list">
+                <div class="about__column">
+                    <div class="about__logo">
+                        <img src="./images/logo-white.svg" alt="" class="about__logo-image">
+                    </div>
+                </div>
+                <div class="about__column">
+                    <h3 class="about__title">
+                        Об аукционе
+                    </h3>
+                    <p class="about__text">
+                        Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны
+                        все эти странные вещи, созданные любителями?
+                    </p>
+                    <p class="about__text about__text-mt">
+                        Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов
+                        невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+                    </p>
+                </div>
+            </div>
+
+        </section>
     </main>
-    <footer class="footer"></footer>
-  </body>
+    <footer class="footer">
+        <div class="footer__column">
+            <address class="address">
+          <a class="footer__address" href="tel:+77778889900">+9 999 555 5555</a>
+          <a class="footer__address" href="mailto:mail@example.com">info@sobaka.ge
+          </a>          
+            наб. Принсенграхт 263-<br/> 265, Амстердам
+        </address>
+        </div>
+        <div class="footer__column">
+            <a href="" class="footer__link footer__active">
+            главная
+          </a>
+            <a href="" class="footer__link">
+            посмотреть лоты
+          </a>
+            <a href="" class="footer__link">
+            об аукционе
+          </a>
+        </div>
+        <div class="footer__column">
+            <a href="" class="footer__social-link">
+                <img src="./images/yt.svg" alt="YouTube" class="footer__social-img">
+            </a>
+            <a href="" class="footer__social-link">
+                <img src="./images/vk.svg" alt="VK" class="footer__social-img">
+            </a>
+            <a href="" class="footer__social-link">
+                <img src="./images/pinterest.svg" alt="Pintrest" class="footer__social-img">
+            </a>
+        </div>
+    </footer>
+</body>
+
 </html>
