--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <a class="footer__address" href="tel:+77778889900">+9 999 555 5555</a>
           <a class="footer__address" href="mailto:mail@example.com">info@sobaka.ge
           </a>          
-            наб. Принсенграхт 263-<br/> 265, Амстердам
+            наб. Принсенграхт 263-265,<br/> Амстердам
         </address>
         </div>
         <div class="footer__column">
